--- a/src/assets/styling/scss/_Nav.scss
+++ b/src/assets/styling/scss/_Nav.scss
@@ -12,16 +12,20 @@
 			margin-right: 1rem;
 			border: none;
 			color: $dark;
+			display: flex;
+			align-items: center;
+
+			.navbar-toggler-text {
+				margin: 0 0.25rem 0 0;
+				font-size: 1rem;
+				text-transform: uppercase;
+
+				&.fade {
+					opacity: 0.3;
+				}
+			}
 
 			.navbar-toggler-icon {
-				// flip horizontally
-				// -moz-transform: scaleX(-1);
-				// -o-transform: scaleX(-1);
-				// -webkit-transform: scaleX(-1);
-				// transform: scaleX(-1);
-				// filter: FlipH;
-				// -ms-filter: 'FlipH';
-
 				background-image: none;
 				transition: transform 0.3s ease;
 
@@ -69,27 +73,6 @@
 					&:active {
 						background-color: darken($dark, 10%);
 						color: lighten($light, 10%);
-					}
-				}
-			}
-		}
-	}
-}
-
-@media (min-width: 768px) {
-	#nav {
-		.navbar {
-			.nav-brand {
-				padding: 1.1rem;
-			}
-
-			.navbar-collapse {
-				height: initial;
-				position: static;
-
-				.navbar-nav {
-					.nav-item {
-						padding: 1.5rem;
 					}
 				}
 			}
