--- a/src/assets/styling/scss/_mixins.scss
+++ b/src/assets/styling/scss/_mixins.scss
@@ -1,35 +1,11 @@
 .btn {
 	padding: 1rem;
-}
-
-.btn-1 {
-	background-color: $color-1;
-	color: $dark;
-
-	&:hover {
-		background-color: darken($color-1, 10%);
-		color: $color-2;
-	}
-
-	&:focus {
-		box-shadow: 0 0 0 0.2rem darken($color-1, 25%);
-	}
-
-	&:active {
-		background-color: $color-2;
-		margin-top: 0.1rem;
-		margin-bottom: -0.1rem;
-		color: $color-1;
-	}
-}
-
-.btn-2 {
 	background-color: $color-2;
 	color: $light;
 
 	&:hover {
-		background-color: darken($color-2, 5%);
-		color: $color-1;
+		background-color: darken($color-2, 4%);
+		color: lighten($light, 4%);
 	}
 
 	&:focus {
@@ -37,10 +13,9 @@
 	}
 
 	&:active {
-		background-color: darken($color-1, 20%);
-		margin-top: 0.1rem;
-		margin-bottom: -0.1rem;
-		color: darken($color-1, 50%);
+		background-color: darken($color-2, 5%);
+		margin-top: 0.3em;
+		margin-bottom: -0.3rem;
 	}
 }
 
@@ -50,6 +25,12 @@
 	margin-top: 5rem;
 	margin-bottom: 5rem;
 	text-align: center;
+}
+
+@media (min-width: $bp-md) {
+	.banner-title {
+		font-size: 3rem;
+	}
 }
 
 .color-1 {
