--- a/src/assets/styling/scss/variables.module.scss
+++ b/src/assets/styling/scss/variables.module.scss
@@ -5,11 +5,12 @@
 // font-family: 'Orelega One', cursive;
 
 $dark: #333;
-$light: #ccc;
+$light: #eeeeee;
 // $color-1: #d4e9eb;
 // $color-2: #af622e;
 
-$color-1: #0e6870;
+// $color-1: #0e6870;
+$color-1: #0e6170;
 $color-2: #c25106;
 $color-3: #8fc1ce;
 
@@ -18,7 +19,7 @@ $font-2: 'Orelega One', cursive;
 
 $bp-sm: 576px;
 $bp-md: 768px;
-$bp-lg: 922px;
+$bp-lg: 992px;
 $bp-xl: 1200px;
 $bp-xxl: 1400px;
 
