--- a/src/assets/styling/scss/index/_IndexBio.scss
+++ b/src/assets/styling/scss/index/_IndexBio.scss
@@ -20,7 +20,6 @@
 			padding: 0 2rem;
 			border-radius: 0.5rem;
 			background-color: $color-1;
-			color: $color-2;
 			min-height: 15rem;
 			display: flex;
 			flex-direction: column;
@@ -28,8 +27,12 @@
 			justify-content: flex-start;
 
 			.bio-name {
+				padding: 0.5rem 0.75rem;
 				margin-top: 2rem;
 				text-emphasis: bold;
+				color: $dark;
+				background-color: $color-3;
+				border-radius: 0.2rem;
 			}
 
 			.bio-occupation {
