--- a/src/assets/styling/scss/contact/_Contact.scss
+++ b/src/assets/styling/scss/contact/_Contact.scss
@@ -18,6 +18,21 @@
 			width: 100%;
 			margin: 0 auto;
 
+			.contact-title {
+				width: 75%;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				text-align: center;
+				margin-bottom: 2rem;
+
+				hr {
+					border-bottom: 0.2rem solid $dark;
+					width: 50%;
+				}
+			}
+
 			.contact-desc {
 				// margin-top: 5rem;
 				max-width: 75%;
